<resources>
    <string name="app_name">SWYHealthMonitoring</string>
    <string name="MainPatientButton">Patient Login</string>
    <string name="MainDoctorButton">Doctor Login</string>
    <string name="PatientLoginUserName">User Name</string>
    <string name="PatientLoginPassword">Password</string>
    <string name="PatientLoginButtonLogin">Login</string>
    <string name="PatientLoginForgetPassword">I Forget My Password</string>
    <string name="PatientLoginText1">Don\'t have an account?</string>
    <string name="PatientLogincreataccount">Create account</string>
    <string name="DoctorLoginUserName">User Name</string>
    <string name="DoctorLoginPassword">Password</string>
    <string name="DoctorLoginButtonLogin">Login</string>
    <string name="DoctorLoginForgetPassword">I Forget My Password</string>
    <string name="DoctorLoginText1">Don\'t have an account?</string>
    <string name="DoctorLogincreataccount">Create account</string>
    <string name="PatientForgetPassword">User Name</string>
    <string name="PatientForgetPasswordHint">we will Send a masseg with your forgetten password to your Email</string>
    <string name="PatientForgetPasswordSubmit">Submit</string>
    <string name="PatientForgetPasswordHint1">Your Password Has been Sent </string>
    <string name="DoctorForgetPassword">User Name</string>
    <string name="DoctorForgetPasswordHint">we will Send a masseg with your forgetten password to your Email</string>
    <string name="DoctorForgetPasswordSubmit">Submit</string>
    <string name="DoctorForgetPasswordHint1">Your Password Has been Sent </string>
    <string name="PatientCreateAccountEmail">Email</string>
    <string name="PatientCreateAccountDate">Date</string>
    <string name="PatientCreateAccountPassword">Password</string>
    <string name="PatientCreateAccountConfirmPassword">Confirm Password</string>
    <string name="PatientCreateAccountNext">Next</string>
    <string name="PatientCreateAccountText">Have an account already?</string>
    <string name="PatientCreateAccountLogin">Login</string>
    <string name="PatientCreateAccount2UserName">User Name</string>
    <string name="PatientCreateAccount2Name">Name</string>
    <string name="PatientCreateAccount2Gender">Gender</string>
    <string name="PatientCreateAccount2Iagree">I agree</string>
    <string name="PatientCreateAccount2CreateAccount">Create Account</string>
    <string name="DoctorCreateAccountEmail">Email</string>
    <string name="DoctorCreateAccountDate">Date</string>
    <string name="DoctorCreateAccountPassword">Password</string>
    <string name="DoctorCreateAccountConfirmPassword">Confirm Password</string>
    <string name="DoctorCreateAccountNext">Next</string>
    <string name="DoctorCreateAccountText">Have an account already?</string>
    <string name="DoctorCreateAccountLogin">Login</string>
    <string name="DoctorCreateAccount2UserName">User Name</string>
    <string name="DoctorCreateAccount2Name">Name</string>
    <string name="DoctorCreateAccount2Gender">Gender</string>
    <string name="DoctorCreateAccount2Iagree">I agree</string>
    <string name="DoctorCreateAccount2CreateAccount">Create Account</string>
    <string name="PatientHomeVideoCall"><![CDATA[Start video call with your doctor now >]]></string>
    <string name="PatientHomeTempText">Check your temperature</string>
    <string name="PatientHomeglocText">Check your Diabetes</string>
    <string name="PatientHomeHeartText">Check your Heart_Rate</string>
    <string name="PatientHomePreText">Check your Pressure</string>
    <string name="PatientHomeHomeIconText">Home</string>
    <string name="PatientHomeHeartIconText"> My Health</string>
    <string name="PatientHomeIconLocationText">Hospital</string>
    <string name="PatientHomeIconFamilyText">Family</string>
    <string name="PatientHomeAccountIconText">Account</string>
    <string name="PatientAccountLogout">Logout</string>
    <string name="PatientAccountUserName">User Name</string>
    <string name="PatientAccountName">Name</string>
    <string name="PatientAccountHomeIconText">Home</string>
    <string name="PatientAccountHeartIconText">My Health</string>
    <string name="PatientAccountIconLocationText">Hospital</string>
    <string name="PatientAccountIconFamilyText">Family</string>
    <string name="PatientAccountAccountIconText">Account</string>
    <string name="PatientAccountPAtientInfoText">Patient Info</string>
    <string name="PatientAccountPAtientEmailAndpassText"><![CDATA[Email & Password]]></string>
    <string name="PatientAccountCustomerSupportText">Customer Support</string>
    <string name="PatientAccountAboutUsText">About Us</string>
    <string name="PatientAccountInformationDateOfBirth">Date of birth</string>
    <string name="PatientAccountInformationName">Name</string>
    <string name="PatientAccountInformationPhone">phone</string>
    <string name="PatientAccountInformationconfirm">Confirm</string>
    <string name="PatientAccountEmailAndPassText">Update Email and Password :</string>
    <string name="PatientAccountEmailAndPassEmail">Email</string>
    <string name="PatientAccountEmailAndPassCurrentPass">Current Password</string>
    <string name="PatientAccountEmailAndPassNewPass">New Password</string>
    <string name="PatientAccountEmailAndPassConfirmPass">Confirm Password</string>
    <string name="PatientAccountEmailAndPassConfirmChange">Confirm Change</string>
    <string name="PatientSupportText">Having Trouble using SWY Health ? We\'re here to help .</string>
    <string name="PatientSupportAskQuestion">Ask Question</string>
    <string name="DoctorHomeStartVideo">Start Video Call</string>
    <string name="DoctorHomeTevt">Home</string>
    <string name="DoctorHomeHomeImage">Home</string>
    <string name="DoctorHomeHometext">Home</string>
    <string name="DoctorHomeAccounttext">Account</string>
    <string name="DoctorVideoCallButton">Add Patient</string>
    <string name="DoctorVideoCallPlainText">patient user Name</string>
    <string name="DoctorVideoCallTextName">Name</string>
    <string name="DoctorVideoCallTextVideo">Start Video Call</string>
    <string name="PatientVideoCallButton">Add Doctor</string>
    <string name="PatientVideoCallTextName">Name</string>
    <string name="PatientVideoCallTextVideo">Start Video Call</string>
    <string name="PatientVideoCallPlainText">doctor User name</string>
    <string name="PatientHospitalHospital">Hospital</string>
    <string name="PatientHospitalKm">KM</string>
    <string name="PatientHospitalHour">Hour</string>
    <string name="title_activity_patient_hospital_map">Map</string>
    <string name="PatientMyHealthHeartRateText">HeartRate</string>
    <string name="PatientMyHealthPressureText">Blood Pressure</string>
    <string name="PatientMyHealthGlucoseText">Glucose Level</string>
    <string name="PatientMyHealthTempReadText"> 37 c </string>
    <string name="PatientMyHealthHeartRateReadText"> 70 b/m</string>
    <string name="PatientMyHealthPressureReadText">120/70</string>
    <string name="PatientMyHealthGlucoseReadText"> 90 mg/dL </string>
    <string name="PatientMyHealthMyHealthText">My Health</string>
    <string name="PatientMyHeartLastReadText">Last Read</string>
    <string name="PatientMyHealthTemperatureText">Temperature</string>
    <string name="PatientFamilyData">Date</string>
    <string name="PatientFamilyNotification">Notification</string>
    <string name="PatientFamilyRelation">Relation</string>
    <string name="PatientFamilyName">Name</string>
    <string name="PatientFamilyAddFamily">Add Family</string>
    <string name="PatientFamilyAddFamilyBotton">Add</string>
    <string name="PatientFamillyAddFamilyText">UserName</string>
    <string name="DoctorVedioAddPatientButton">Add</string>
    <string name="DoctorVedioAddPatientText">UserName</string>
    <string name="PatientVedioAddDoctorButton">Add</string>
    <string name="PatientVedioAddDoctorText">UserName</string>
    <string name="DoctorAccountName">Name</string>
    <string name="DoctorAccountUserName">UserName</string>
    <string name="DoctorAccountLogout">Logout</string>
    <string name="DoctorAccountInfotext">Doctor Info</string>
    <string name="DoctorAccountEmailandPass"><![CDATA[Email & password]]></string>
    <string name="DoctorAccountHomeText">Home</string>
    <string name="DoctorAccountAccountText">Account</string>
    <string name="DoctorAccountInfoSpecialisty">Speciality</string>
    <string name="DoctorAccountInfoName">Name</string>
    <string name="DoctorAccountInfoPhone">Phone</string>
    <string name="DoctorAccountInfoConfirm">Confirm</string>
    <string name="DoctorAccountEmail">Email</string>
    <string name="DoctorAccountCurrentPass">Current Password</string>
    <string name="DoctorAccountNewPass">New Password</string>
    <string name="DoctorAccountConfirmPass">Confirm Password</string>
    <string name="DoctorAccountConfirmChange">Confirm Password</string>
    <string name="DoctorAccountEmailAndPassConfirmChange">Confirm Change</string>
    <string name="DoctorVideoCallUser1">User 1</string>
    <string name="DoctorAccountCustomerSupportText">Customer Support</string>
    <string name="DoctorAccountAboutUsText">About Us</string>
    <string name="DoctorSupportAskQuestion">Ask Question</string>
    <string name="DoctorSupportText">Having Trouble using SWY Health ? We\'re here to help .</string>
    <string name="PatientMyHealthStartReading">Start Reading</string>
    <string name="PatientFamilyAddFamily1">Add Family</string>
    <string name="PatientAskQuestionText">Ask Our Support Team A Question</string>
    <string name="PatientAskQuestionComplainText">write your question here ?</string>
    <string name="PatientAskQuestionComplainPhoto">+ Add Photo</string>
    <string name="PatientAskQuestionSubmit">Submit</string>
    <string name="DoctorAskQuestionText">Ask Our Support Team A Question</string>
    <string name="DoctorAddPatient">Add Patient</string>
    <string name="DoctorAddPatientText">Patient User Name</string>
    <string name="DoctorAddPatientBotton">Add</string>
    <string name="PatientAddDoctor">Add Doctor</string>
    <string name="PatientAddDoctorText">Doctor User Name</string>
    <string name="PatientAddDoctorBotton">Add</string>
    <string name="TempSettingHistory">You Can See History Of</string>
    <string name="TempSettingAutoReading">Automatic Updating Every</string>
    <string name="TempSettingHistoryRadio1">1 Month</string>
    <string name="TempSettingHistoryRadio2">3 Month</string>
    <string name="TempSettingHistoryRadio3">6 Month</string>
    <string name="TempSettingHistoryRadio4">1 Year</string>
    <string name="TempSettingAutoReadingRadio1"> Day</string>
    <string name="TempSettingAutoReadingRadio2">2 Days</string>
    <string name="TempSettingAutoReadingRadio3"> Week</string>
    <string name="TempSettingAutoReadingRadio4">2 Week</string>
    <string name="HeartRateSettingHistory">You Can See History Of</string>
    <string name="HeartRateSettingAutoReading">Automatic Updating Every</string>
    <string name="HeartRateSettingHistoryRadio1">1 Month</string>
    <string name="HeartRateSettingHistoryRadio2">3 Month</string>
    <string name="HeartRateSettingHistoryRadio3">6 Month</string>
    <string name="HeartRateSettingHistoryRadio4">1 Year</string>
    <string name="HeartRateSettingAutoReadingRadio1"> Day</string>
    <string name="HeartRateSettingAutoReadingRadio2">2 Days</string>
    <string name="HeartRateSettingAutoReadingRadio3"> Week</string>
    <string name="HeartRateSettingAutoReadingRadio4">2 Week</string>
    <string name="PatientHeart">Heart Rate</string>
    <string name="PatientHeartReading">Reading</string>
    <string name="PatientHeartOK">OK</string>
    <string name="PatientSugerReading">Reading</string>
    <string name="PatientSugerOK">OK</string>
    <string name="PatientSuger">Suger</string>
</resources>