<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mac.swyhealthmonitoring.patient.my_health.TempSetting">

    <ImageView
        android:id="@+id/SWYImageView"
        android:layout_width="193dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/swylogo" />

    <TextView
        android:id="@+id/PressureSettingHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/TempSettingHistory"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SWYImageView"
        app:layout_constraintVertical_bias="0.019" />

    <RadioGroup
        android:id="@+id/TempSettingHistoryRadio"
        android:layout_width="300dp"
        android:layout_height="132dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PressureSettingHistory"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/TempSettingHistoryRadio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingHistoryRadio1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/TempSettingHistoryRadio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingHistoryRadio2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/TempSettingHistoryRadio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingHistoryRadio3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/TempSettingHistoryRadio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingHistoryRadio4"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/TempSettingAutoReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/TempSettingAutoReading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TempSettingHistoryRadio"
        app:layout_constraintVertical_bias="0.066" />

    <RadioGroup
        android:id="@+id/TempSettingAutoReadingRadio"
        android:layout_width="300dp"
        android:layout_height="133dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TempSettingAutoReading"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/TempSettingAutoReadingRadio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingAutoReadingRadio1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/TempSettingAutoReadingRadio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingAutoReadingRadio2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/TempSettingAutoReadingRadio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingAutoReadingRadio3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/TempSettingAutoReadingRadio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TempSettingAutoReadingRadio4"
            android:textSize="18sp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
