<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp">


    <TextView
        android:id="@+id/DoctorAddPatient"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/DoctorAddPatient"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/DoctorAddPatientText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/DoctorAddPatientText"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/DoctorAddPatientBotton"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/DoctorAddPatientBotton" />




</LinearLayout>