<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/PatientSuger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/PatientSuger"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/PatientSugerReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PatientSugerReading"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/PatientSugerOK"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/PatientSugerOK" />

</LinearLayout>