<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/PatientFamilyAddFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/PatientFamilyAddFamily1"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/PatientFamilyAddFamily1" />

    <AutoCompleteTextView
        android:id="@+id/PatientFamilyAddFamilyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/PatientFamillyAddFamilyText"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/PatientFamilyAddFamilyBotton"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/PatientFamilyAddFamilyBotton" />





</LinearLayout>