<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mac.swyhealthmonitoring.DoctorForgetPassword">

    <ImageView
        android:id="@+id/SWYImageView"
        android:layout_width="192dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swylogo" />


    <EditText
        android:id="@+id/DoctorForgetPassword"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="326dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:hint="@string/DoctorForgetPassword"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SWYImageView" />

    <TextView
        android:id="@+id/DoctortForgetPasswordHint"
        android:layout_width="281dp"
        android:layout_height="145dp"
        android:layout_marginBottom="199dp"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/DoctorForgetPasswordHint"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoctorForgetPassword"
        app:layout_constraintVertical_bias="0.343" />

    <Button
        android:id="@+id/DoctorForgetPasswordSubmit"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="44dp"
        android:text="@string/DoctorForgetPasswordSubmit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoctortForgetPasswordHint" />


</android.support.constraint.ConstraintLayout>
